2007-09-24 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to used UPSTREAM_KEY again
	* firefox.gpg: Added new upstream key

2007-09-22 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
	* firefox: removed obsolete xfeDoCommand code.

2007-09-19 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 2.0.0.7, SECURITY_PATCH=11
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.7
	  New sig not part of firefox.gpg
	* PRE_BUILD: Added && after default_pre_build
	* firefox-config.patch: updated to 2.0.0.7

2007-09-15 David Brown <dmlb2000@gmail.com>
	* PRE_BUILD: added patch for newer cairo's
	* cairo-fixes.patch: added for missing cairo_font_type_t

2007-07-31 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.0.0.6, SECURITY_PATCH=10
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.6
	* firefox-config.patch: updated to 2.0.0.6

2007-07-18 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.0.0.5, SECURITY_PATCH=9
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.5
	* firefox-config.patch: updated to 2.0.0.5

2007-06-06 David Kowis <dkowis@shlrm.org>
	* PRE_BUILD, DEPENDS, visibility.patch: Don't need the visibility patch anymore for 
	  amd64 (probaby ppc)

2007-05-31 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.0.0.4, SECURITY_PATCH=8
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.4
	* firefox-config.patch: updated to 2.0.0.4

2007-04-25 Thomas Orgis <sobukus@sourcemage.org>
	* PRE_BUILD, DEPENDS: apply the visibility patch for ppc, too, as
	  build fails strangely without (bogus unresolved syms in xpcom/obsolete)

2007-03-20 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to version 2.0.0.3
	* BUILD: Small cleanup of FIREFOX_HOME variable.
	* INSTALL: Updated sed to using $VERSION vice hardcoded version
	* firefox-config.patch: Updated for version 2.0.0.3.

2007-03-03 George Sherwood <george@beernabeer.com>