@@ -5,7 +5,7 @@ if  [  "$FIREFOX_CVS"  ==  "y"  ];  then
    SOURCE_URL[0]=cvs://:pserver:anonymous@cvs-mirror.mozilla.org:/cvsroot:mozilla/client.mk
    SOURCE_IGNORE=volatile
 else
-         VERSION=2.0.0.7
+         VERSION=2.0.0.8
           SOURCE=$SPELL-$VERSION-source.tar.bz2
          SOURCE2=${SOURCE}.asc
       SOURCE_GPG="firefox.gpg:${SOURCE2}:UPSTREAM_KEY"
@@ -15,7 +15,7 @@ else
    SOURCE_URL[2]=ftp://ftp.in2p3.fr/pub/mozilla/$SPELL/releases/$VERSION/source/$SOURCE
    SOURCE_URL[3]=ftp://ftp.sai.msu.su/pub/unix/WWW/browsers/$SOURCE
   SOURCE2_URL[0]=${SOURCE_URL}.asc
-  SECURITY_PATCH=11
+  SECURITY_PATCH=12
 fi
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/mozilla
         WEB_SITE=http://www.mozilla.org/projects/firefox/
